aws/disallow-static-aws-credentials/.chainsaw-test/secret-fail-data.yaml
apiVersion: v1
kind: Secret
metadata:
  name: aws-creds-data
  namespace: default
type: Opaque
data:
  AWS_ACCESS_KEY_ID: QUTJQUVYT1NGT0RORjdFWEFNUExF
  AWS_SECRET_ACCESS_KEY: d0phbHJYVXRuRkVNSS9LN01ERU5HL2JQeFJmaUNZRVhBTVBMRUtFWQ==
