aws/disallow-static-aws-credentials/.chainsaw-test/secret-fail-stringdata.yaml
apiVersion: v1
kind: Secret
metadata:
  name: aws-creds-stringdata
  namespace: default
type: Opaque
stringData:
  AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
  AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
