aws/disallow-static-aws-credentials/.chainsaw-test/secret-pass.yaml
apiVersion: v1
kind: Secret
metadata:
  name: app-config
  namespace: default
type: Opaque
data:
  DATABASE_URL: cG9zdGdyZXM6Ly91c2VyOnBhc3NAZGI6NTQzMi9teWRi
  API_TOKEN: c29tZS1hcGktdG9rZW4=
